--- a/denv.example
+++ b/denv.example
@@ -1,9 +1,9 @@
 # main database
-DB_HOST=172.81.60.93
+DB_HOST=cf_ms_mysql
 DB_PORT=3306
-DB_DATABASE=divine_apps
-DB_USERNAME=db_user
-DB_PASSWORD=paswer56bfe
+DB_DATABASE=emails
+DB_USERNAME=emails_admin
+DB_PASSWORD=D89466226d04f7B
 DATABASE_URL=mysql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}
 
 # ports
@@ -21,20 +21,14 @@ QUEUE_OPTIONS="--queue=default --sleep=3 --tries=3"
 NUM_PROCS=1
 SUPERVISOR_PORT=3993
 SUPERVISOR_USERNAME=teamusers
-SUPERVISOR_PASSWORD=ci2904i8hg43d
+SUPERVISOR_PASSWORD=R171a673c033P
 
 # MYSQL
-MYSQL_ROOT_PASSWORD=kj3io4oJuih8jLE4f
+MYSQL_ROOT_PASSWORD=W255d72188K
 MYSQL_DATABASE=${DB_DATABASE}
 MYSQL_PASSWORD=${DB_PASSWORD}
 MYSQL_USER=${DB_USERNAME}
 MYSQL_HOST=${DB_HOST}
-
-# phpmyadmin
-PMA_ARBITRARY=0
-PMA_PORT=${DB_PORT}
-PMA_HOST=${DB_HOST}
-PHPMYADMIN_PORT=3826
 
 # smtp
 SMTP_HOST=
