--- a/containers/nginx/sites-enabled/roundcube.conf
+++ b/containers/nginx/sites-enabled/roundcube.conf
@@ -3,11 +3,11 @@ server {
     index index.php index.html;
 
     root /var/www/roundcube;
-    
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
-        fastcgi_pass if-ms-php-83:9000;
+        fastcgi_pass if_ms_php:9000;
         fastcgi_index index.php;
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
@@ -19,4 +19,3 @@ server {
         gzip_static on;
     }
 }
-
