--- a/containers/php/8.2/Dockerfile
+++ b/containers/php/8.2/Dockerfile
@@ -4,40 +4,65 @@ FROM php:8.2-fpm
 ARG user
 ARG uid
 
+# Set environment variables to ensure non-interactive installation
+ENV DEBIAN_FRONTEND=noninteractive
+
 # Install system dependencies
-RUN apt update && apt install -y \
+RUN apt-get update && apt-get install -y --no-install-recommends \
     git \
     curl \
     libpng-dev \
-    oniguruma-dev \
-    icu-dev \
+    libonig-dev \
+    libicu-dev \
     libxml2-dev \
-    libzip-dev\
+    libzip-dev \
     zip \
     unzip \
     nodejs \
     npm \
-    sqlite \
+    sqlite3 \
     libpq-dev \
-    mariadb-connector-c \
     mariadb-client \
-    imagemagick-dev imagemagick libjpeg-turbo libgomp freetype autoconf g++ gcc make gmp
-
-RUN pecl install imagick
-
-# Clear cache
-RUN rm -rf /var/cache/apt/*
-
-# Install PHP extensions
-RUN docker-php-ext-configure intl && docker-php-ext-configure zip && \
-   docker-php-ext-install mbstring exif pcntl bcmath gd intl zip pdo_mysql
-
-RUN docker-php-ext-enable imagick
+    libmariadb-dev-compat \
+    imagemagick \
+    libmagickwand-dev \
+    libjpeg62-turbo-dev \
+    libfreetype6-dev \
+    libgomp1 \
+    g++ \
+    gcc \
+    make \
+    autoconf \
+    libgmp-dev && \
+    pecl install imagick && \
+    docker-php-ext-configure intl && \
+    docker-php-ext-configure zip && \
+    docker-php-ext-configure gd --with-freetype --with-jpeg && \
+    docker-php-ext-install -j$(nproc) \
+        mbstring \
+        exif \
+        pcntl \
+        bcmath \
+        gd \
+        intl \
+        zip \
+        pdo_mysql \
+        gmp && \
+    docker-php-ext-enable imagick && \
+    apt-get clean && \
+    rm -rf /var/lib/apt/lists/*
 
 # Get latest Composer
 COPY --from=composer:latest /usr/bin/composer /usr/bin/composer
 
 # Create system user to run Composer and Artisan Commands
-RUN adduser -G www-data -u ${uid} -D -h home/${user} ${user} && addgroup ${user} && addgroup ${user} root && \
-    mkdir -p /home/${user}/.composer && chown -R ${user}:${user} /home/${user}
+RUN useradd -m -d /home/${user} -u ${uid} -U -s /bin/bash ${user} && \
+    mkdir -p /home/${user}/.composer && \
+    chown -R ${user}:${user} /home/${user}
 
+# Set working directory
+WORKDIR /var/www
+
+# Expose port 9000 and start PHP-FPM server
+EXPOSE 9000
+CMD ["php-fpm"]
